[gd_scene load_steps=5 format=3 uid="uid://b8h5tpryp2o0v"]

[ext_resource type="Script" path="res://scripts/Inventory.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cb5j8hw2q7v3g" path="res://scenes/InventorySlot.tscn" id="2"]

[sub_resource type="Animation" id="Animation_open"]
resource_name = "open"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InventoryPanel:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -600), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1"]
_data = {
"open": SubResource("Animation_open")
}

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
process_mode = 2
visible = false
script = ExtResource("1")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0)

[node name="InventoryPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="ItemGrid" type="GridContainer" parent="InventoryPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 6

[node name="VSeparator" type="VSeparator" parent="InventoryPanel/HBoxContainer"]
layout_mode = 2

[node name="ItemDetails" type="VBoxContainer" parent="InventoryPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemName" type="Label" parent="InventoryPanel/HBoxContainer/ItemDetails"]
layout_mode = 2
text = "Select an item"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="InventoryPanel/HBoxContainer/ItemDetails"]
layout_mode = 2

[node name="ItemDescription" type="RichTextLabel" parent="InventoryPanel/HBoxContainer/ItemDetails"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Item details will appear here when you select an item from your inventory."

[node name="ItemStats" type="VBoxContainer" parent="InventoryPanel/HBoxContainer/ItemDetails"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="InventoryPanel/HBoxContainer/ItemDetails/ItemStats"]
layout_mode = 2
text = ""

[node name="EquippableLabel" type="Label" parent="InventoryPanel/HBoxContainer/ItemDetails/ItemStats"]
layout_mode = 2
text = ""

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1")
} 